--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "vitest",
@@ -22,14 +25,15 @@
     "tsup": "^6.6.3",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5",
-    "vitest": "^0.29.1"
+    "vitest": "^0.29.1",
+    "sqlite3": "^5.1.4"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "knex": "^2.4.2",
-    "sqlite3": "^5.1.4",
+    "pg": "^8.9.0",
     "zod": "^3.20.6"
   }
 }
